--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/wilted-milkshake/wilted-milkshake/issues"
   },
-  "homepage": "https://github.com/wilted-milkshake/wilted-milkshake#readme"
+  "homepage": "https://github.com/wilted-milkshake/wilted-milkshake#readme",
+  "dependencies": {
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8"
+  }
 }
