Add react-router, add client-side file structure

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "q": "^1.4.1",
     "browserify": "^13.0.0",
     "react": "^0.14.8",
-    "react-dom": "^0.14.8"
+    "react-dom": "^0.14.8",
+    "react-router": "^2.0.1"
   }
 }
