Signin component can make post req

--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "tests"
   ],
   "dependencies": {
-    "react": "~0.14.8"
+    "react": "~0.14.8",
+    "jquery": "^2.2.3",
+    "axios": "^0.9.1"
   }
 }
