--- a/package.json
+++ b/package.json
@@ -22,9 +22,17 @@
     "babelify": "^7.2.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.1",
+    "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "jwt-simple": "^0.2.0",
+    "method-override": "^2.3.5",
     "mongoose": "^4.4.11",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "q": "^1.4.1",
     "react-router": "^2.0.1"
   }
