--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
     "html-webpack-plugin": "^2.15.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.15",
     "webpack-dev-server": "^1.14.1"
   }
