--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "q": "^1.4.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
-    "react-router": "^2.0.1"
+    "react-router": "^2.0.1",
+    "socket.io": "^1.4.5"
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
